@@ -1,0 +1,4 @@
+
+Interface?: 192.168.0.107 --- 0xa
+  Adresse Internet      Adresse physique      Type
+  192.168.0.1           00-80-0c-07-ae-d3     dynamique
